--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -2,27 +2,19 @@ FROM devframe-centos
 
 USER root
 
-RUN mkdir /data
-RUN chmod 775 data
+RUN mkdir -p /data/tool
 
-RUN useradd -u 185 -G root webwas
-
-ADD files/jdk-8u191-linux-x64.tar.gz /usr/local/
-
+ADD files/jdk-8u191-linux-x64.tar.gz /data/tool/
+RUN cp -rf /data/tool/jdk1.8.0_191 /usr/local/
 ENV JAVA_HOME /usr/local/jdk1.8.0_191
 
-ADD files/apache-tomcat-8.5.35.tar.gz /usr/local/
+ADD files/apache-tomcat-8.5.35.tar.gz /data/tool/
+RUN cp -rf /data/tool/apache-tomcat-8.5.35 /usr/local/
+RUN chmod +x /data/tool/apache-tomcat-8.5.35/bin/*.sh
+ENV CATALINA_HOME /data/tool/apache-tomcat-8.5.35
 
-ARG TOMCAT_PATH=/usr/local/apache-tomcat-8.5.35
-
-RUN chmod +x ${TOMCAT_PATH}/bin/*.sh \
-  && chown -R webwas:root ${TOMCAT_PATH}
-
-ENV CATALINA_HOME ${TOMCAT_PATH}
 ENV PATH $JAVA_HOME/bin:$CATALINA_HOME/bin:$PATH
 
-EXPOSE 8080
-
-USER webwas
+EXPOSE 8080 8009
 
 CMD ["catalina.sh", "run"]
