--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -2,7 +2,6 @@ FROM docker.io/centos:7.5.1804
 
 USER root
 
-RUN yum -y groupinstall "Development Tools" \
- && yum -y install expat-devel
+RUN yum -y groupinstall "Development Tools"
 
 CMD ["/bin/bash"]
