--- a/apache/conf/workers.properties
+++ b/apache/conf/workers.properties
@@ -1,4 +1,5 @@
 worker.list=worker1
 worker.worker1.type=ajp13
-worker.worker1.host=192.168.99.100
+#worker.worker1.host=192.168.99.100
+worker.worker1.host=devframe-tomcat
 worker.worker1.port=8009
